--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                     <div id="shorten-list"></div>
             </div>
         </section>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
         <script src="js/moment.min.js"></script>
         <script src="js/index.js"></script>
     </body>
